[workspace]
resolver = "2"
members = ["tui", "core", "server"]
default-members = ["tui", "core", "server"]

[workspace.package]
authors = ["Taehoon Moon <taehoon.moon@outlook.com>"]
version = "0.7.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/gluesql/glues"

[workspace.dependencies]
glues-core = { path = "./core", version = "0.7.0" }
async-recursion = "1.1.1"

[workspace.dependencies.gluesql]
git = "https://github.com/gluesql/gluesql"
rev = "7960be640defc8083be6751d3324cf2dd809a645"
default-features = false
features = [
    "gluesql_memory_storage",
    "gluesql-csv-storage",
    "gluesql-file-storage",
    "gluesql-git-storage",
    "gluesql-mongo-storage",
]

[profile.release]
lto = true
