[package]
name = "glues-core"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Headless state management module for Glues Notes"

[dependencies]
gluesql.workspace = true
async-recursion.workspace = true
thiserror = "1.0.61"
async-trait = "0.1"
uuid = { version = "1.10", features = ["v7"] }
strum_macros = "0.26.4"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt", "macros"] }

[dev-dependencies]
tokio = { version = "1.41.0", features = ["macros", "rt"] }
axum = "0.7"
tiny_http = "0.12"
serde_json = "1.0"
