[package]
name = "glues-core"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Headless state management module for Glues Notes"
readme = "README.md"
keywords.workspace = true

[dependencies]
async-recursion.workspace = true
thiserror = "1.0.61"
async-trait = "0.1"
uuid = { version = "1.18.1", features = ["v7", "js"] }
strum_macros = "0.26.4"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.41.0", features = ["macros", "rt"] }
tiny_http = "0.12"
serde_json = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gluesql = { workspace = true, features = [
    "gluesql_memory_storage",
    "gluesql-csv-storage",
    "gluesql-file-storage",
    "gluesql-redb-storage",
    "gluesql-git-storage",
    "gluesql-mongo-storage",
] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }
tokio = { version = "1.41.0", features = ["rt"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gluesql = { workspace = true, features = [
    "gluesql_memory_storage",
    "gluesql-web-storage",
    "gluesql-idb-storage",
] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
