[package]
name = "glues-tui"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TUI frontend for the Glues note-taking experience"
readme = "README.md"
keywords.workspace = true
default-run = "glues-tui"

[lib]
name = "glues_tui"
crate-type = ["rlib"]

[dependencies]
glues-core.workspace = true
async-recursion.workspace = true
color-eyre = "0.6.3"
tui-big-text = "0.8.2"
tui-input = { version = "0.15.0", default-features = false }
textwrap = "0.16"
edtui = { version = "0.11", default-features = false, features = ["syntax-highlighting"] }
gluesql = { workspace = true, features = ["gluesql-csv-storage"] }
home = "0.5.9"
arboard = "3.4.1"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm"] }

[[bin]]
name = "glues-tui"
path = "src/main.rs"

[dev-dependencies]
insta = { version = "1", features = ["glob"] }
once_cell = "1"
regex = "1"
